# DataCleanEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: cleaning_engine.py  dataclean_env.py  dataset_generator.py  models.py  reward_calculator.py
env/graders/: base_grader.py
env/tasks/: task_data_lake.py  task_monday_morning.py  task_warehouse_merge.py
scripts/: generate_sample_data.py
server/: app.py
tests/: test_env.py
